<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
     <string name="app_name">Sahabat Sehat</string>
    <string name="image">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ob1">Booking langsung tanpa harus antri!</string>
    <string name="obsub1">Booking konsultasi dokter langsung tanpa harus mengantri ke rumah sakit.</string>
    <string name="mulai">Mulai</string>
    <string name="next"> > </string>
    <string name="skip">Skip</string>
    <string name="nextchapter"><![CDATA[>]]></string>
    <string name="ob2">Dokter tersedia 24 jam untukmu!\n</string>
    <string name="obsub2">Pagi, siang, malam selama 24 jam, dokter akan selalu tersedia untuk memberikan layanan.</string>
    <string name="ob3">Mulai konsultasikan dan dokter menghampirimu!</string>
    <string name="obsub3">Mulai konsultasikan kesehatanmu dan dokter akan menghapirimu untuk pemeriksaan.</string>
    <string name="app_name">sahabatsehat_profile</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_kyungsoo_62888">Kyungsoo +62888 8888 8888</string>
    <string name="lbl_nama_lengkap2">Nama lengkap</string>
    <string name="lbl_jenis_kelamin">Jenis Kelamin</string>
    <string name="msg_nik_nomor_indu">NIK (Nomor Induk Kependudukan)</string>
    <string name="lbl_62">+62</string>
    <string name="lbl_profil_saya">Profil Saya</string>
    <string name="lbl_dokter_umum">Dokter Umum</string>
    <string name="msg_ubah_foto_profi">Ubah Foto Profil</string>
    <string name="lbl_rp_20_000">Rp. 20.000</string>
    <string name="lbl_dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="lbl_kantor">Kantor</string>
    <string name="msg_nomor_induk_kep">Nomor Induk Kependudukan</string>
    <string name="lbl_daftar_keluarga">Daftar Keluarga</string>
    <string name="lbl_label_alamat">Label Alamat</string>
    <string name="lbl_do_kyung_soo">Do Kyung Soo</string>
    <string name="lbl_no_nik">No. NIK</string>
    <string name="lbl_rumah">Rumah</string>
    <string name="msg_isilah_patokan">Isilah patokan rumah</string>
    <string name="msg_pin_point_lokas">Pin Point Lokasi</string>
    <string name="msg_ubah_identitas">Ubah Identitas Pengguna</string>
    <string name="msg_isilah_dengan_a">Isilah dengan alamat lengkap</string>
    <string name="lbl_booking">Booking</string>
    <string name="lbl_park_chan_yeol">Park Chan Yeol</string>
    <string name="msg_patokan_warna">Patokan, warna rumah, pesan khusus, dll</string>
    <string name="msg_62_3181_3186_1">+62 3181 3186 1752</string>
    <string name="msg_kentingan_jl">Kentingan, Jl. Ir Sutami No.36, Kec. Jebres, Kota Surakarta</string>
    <string name="lbl_alamat_lengkap">Alamat Lengkap</string>
    <string name="lbl_5_tahun">5 Tahun</string>
    <string name="lbl_email">Email</string>
    <string name="msg_tambah_daftar_k">Tambah Daftar Keluarga</string>
    <string name="lbl_dapatkan">Dapatkan</string>
    <string name="lbl_laki_laki2">Laki - Laki</string>
    <string name="msg_dr_yislam_al_j">dr. Yislam Al Jaidi</string>
    <string name="lbl_perempuan">Perempuan</string>
    <string name="msg_pastikan_kembal">Pastikan kembali nomor telepon yang anda masukkan sudah benar</string>
    <string name="lbl_saudara">Saudara</string>
    <string name="lbl_simpan">Simpan</string>
    <string name="lbl_kim_jong_in">Kim Jong In</string>
    <string name="lbl_hubungan">Hubungan</string>
    <string name="lbl_tambah_alamat">Tambah Alamat</string>
    <string name="msg_titik_kooordina">Titik kooordinat</string>
    <string name="msg_identitas_pengg">Identitas Pengguna</string>
    <string name="msg_identitas_pemil">Identitas pemilik alamat</string>
    <string name="lbl_dokter_favorit">Dokter Favorit</string>
    <string name="lbl_nama_lengkap">Nama Lengkap</string>
    <string name="lbl_daftar_alamat">Daftar Alamat</string>
    <string name="lbl_12_01_1993">12/01/1993</string>
    <string name="lbl_no_hp">No. Hp</string>
    <string name="lbl_kim_jong_dae">Kim Jong Dae</string>
    <string name="lbl_tanggal_lahir">Tanggal Lahir</string>
    <string name="msg_7q69q346984qhad">7q69q346984qhadh429r92ry23yr23r22h</string>
    <string name="lbl_mulai_dari">Mulai Dari</string>
    <string name="lbl_laki_laki">Laki - laki</string>
    <string name="msg_331116429018318">3311164290183186177</string>
    <string name="msg_dokyung_gma">dokyung****@gmail.com</string>
    <string name="lbl_nik">NIK</string>
    <string name="lbl_patokan">Patokan</string>
    <string name="msg_please_enter_valid_nu">Please enter valid number</string>
    <string name="msg_please_enter_valid_mo_nu">Please enter valid mobile number</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
