<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingFragment2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/fragmen2"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="90dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center"
                android:text="@string/ob2"
                android:textColor="@color/sea_green"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/obsub2"
                android:textSize="15sp"
                android:layout_marginBottom="200dp"/>

        </LinearLayout>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="56dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/sea_green"
            android:text="@string/nextchapter"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/sea_green"
            android:text="@string/skip"
            android:textSize="15sp"/>
    </RelativeLayout>



</FrameLayout>