<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="start"
        android:id="@+id/linearEditDetailPro"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_23pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtUbahIdentitas"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_weight="0.9"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text=""
                    style="@style/txtInterbold18" tools:text="@string/msg_ubah_identitas"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <View android:background="@color/gray_200"
            android:id="@+id/lineRectangle141"
            android:layout_height="@dimen/_4pxv"
            android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_430pxh"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearNamaLengkap"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end" android:id="@+id/txtLabel"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="}"
                style="@style/txtInterregular16" tools:text="@string/lbl_nama_lengkap"/>
            <EditText
                android:background="@drawable/rectangle_border_gray_600_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_do_kyung_soo"
                android:id="@+id/etFullname" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_700"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearNIK"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text=""
                style="@style/txtInterregular16" tools:text="@string/msg_nik_nomor_indu"/>
            <EditText
                android:background="@drawable/rectangle_border_gray_600_radius_10"
                android:ellipsize="end"
                android:hint="@string/msg_331116429018318"
                android:id="@+id/etNikid" android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_800"
                style="@style/etRoundedOutline_1" tools:ignore="Autofill"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtLabelTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text=""
            style="@style/txtInterregular16" tools:text="@string/lbl_tanggal_lahir"/>
        <FrameLayout android:id="@+id/frameStackcalendar"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_52pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_7pxv" android:layout_width="@dimen/_376pxh">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCalendar"
                android:layout_gravity="end"
                android:layout_height="@dimen/_22pxh"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="@dimen/_20pxh"
                android:singleLine="true" android:textAllCaps="false" style="@style/btn"/>
            <EditText
                android:background="@drawable/rectangle_border_gray_600_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_12_01_1993"
                android:id="@+id/etDate" android:inputType="text"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_700"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLabelThree"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text=""
            style="@style/txtInterregular16" tools:text="@string/lbl_jenis_kelamin"/>
        <RadioGroup android:id="@+id/rgGender"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent" android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbLakilaki"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/gray_300"
                android:ellipsize="end"
                android:fontFamily="@font/inter"
                android:paddingStart="@dimen/_7pxh"
                android:singleLine="true"
                android:text="@string/lbl_laki_laki"
                android:textColor="@color/gray_700"
                android:textFontWeight="400"
                android:textSize="@dimen/_14pxh"
                android:textStyle="normal"
                tools:text="@string/lbl_laki_laki" />
            <RadioButton android:buttonTint="@color/gray_300"
                android:ellipsize="end" android:fontFamily="@font/inter"
                android:id="@+id/rbPerempuan"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_width="wrap_content"
                android:paddingStart="@dimen/_7pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@string/lbl_perempuan"
                android:textColor="@color/gray_700"
                android:textFontWeight="400"
                android:textSize="@dimen/_14pxh"
                android:textStyle="normal" tools:text="@string/lbl_perempuan"/>
        </RadioGroup>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearNoHp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelFour"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text=""
                style="@style/txtInterregular16" tools:text="@string/lbl_no_hp"/>
            <EditText
                android:background="@drawable/rectangle_border_gray_600_radius_10"
                android:ellipsize="end" android:hint="@string/lbl_62"
                android:id="@+id/etNumberphone"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_23pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_700"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearEmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelFive"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text=""
                style="@style/txtInterregular16" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_border_gray_600_radius_10"
                android:ellipsize="end"
                android:hint="@string/msg_dokyung_gma"
                android:id="@+id/etEmail" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_21pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text=""
                android:textColorHint="@color/gray_800"
                style="@style/etRoundedOutline_1" tools:ignore="Autofill"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSimpan"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_simpan"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_simpan"/>
    </LinearLayout>
</layout>
